influxdb-python (0.1.13-1) unstable; urgency=low

  * Released new upstream version

 -- Alexandre Viau <alexandre@alexandreviau.net>  Wed, 12 Nov 2014 17:03:35 -0500