@@ -13,13 +13,13 @@ Build-Depends: debhelper (>= 9),
                python-setuptools,
                python-requests (>= 1.0.3),
                python-mock,
-               python-requests-mock (>= 0.5.1),
+#               python-requests-mock (>= 0.5.1),
                python-nose,
                python3-all,
                python3-setuptools,
                python3-requests,
                python3-mock,
-               python3-requests-mock (>= 0.5.1),
+#               python3-requests-mock (>= 0.5.1),
                python3-nose
 Standards-Version: 3.9.6
 
